Migrate to Gatling 3.5.1 - seems that the work was not finished